--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^17.0.31",
     "typescript": "^4.5.4",
     "vite": "^2.9.7"
   }
