--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,12 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@styles/*": ["src/styles/*"],
+      "@scripts/*": ["src/scripts/*"],
+    }
   },
   "include": ["src"]
 }
