--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@components/*": ["src/components/*"],
       "@styles/*": ["src/styles/*"],
-      "@scripts/*": ["src/scripts/*"],
     }
   },
   "include": ["src"]
