--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components/*"],
+      "@interfaces/*": ["src/interfaces/*"],
       "@styles/*": ["src/styles/*"],
     }
   },
